syntax = "proto3";

package controller.api.resources.hosts.v1;

option go_package = "github.com/hashicorp/boundary/internal/gen/controller/api/resources/hosts;hosts";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/struct.proto";
import "controller/api/resources/scopes/v1/scope.proto";
import "controller/custom_options/v1/options.proto";

// HostCatalog manages Hosts and HostSets
message HostCatalog {
	// The ID of the host
	// Output only.
	string id = 10;

	// Scope information for this resource
	// Output only.
	resources.scopes.v1.ScopeInfo scope = 20;

	// Optional name for identification purposes
	google.protobuf.StringValue name = 30 [(custom_options.v1.generate_sdk_option) = true, (custom_options.v1.mask_mapping) = {this:"name" that: "name"}];

	// Optional user-set description for identification purposes
	google.protobuf.StringValue description = 40 [(custom_options.v1.generate_sdk_option) = true, (custom_options.v1.mask_mapping) = {this:"description" that: "description"}];

	// The time this resource was created
	// Output only.
	google.protobuf.Timestamp created_time = 50 [json_name="created_time"];

	// The time this resource was last updated
	// Output only.
	google.protobuf.Timestamp updated_time = 60 [json_name="updated_time"];

	// The version can be used in subsequent write requests to ensure this resource
	// has not changed and to fail the write if it has.
	uint32 version = 70;

	// The type of the resource, to help differentiate schemas
	string type = 80;

	// Attributes specific to the catalog type
	google.protobuf.Struct attributes = 90 [(custom_options.v1.generate_sdk_option) = true];
}

message StaticHostCatalogDetails {
	// nothing here yet.
}

message AwsEc2HostCatalogDetails {
	// The AWS regions from which this catalog will retrieve the EC2 instances.
	repeated string regions = 10;

	// The access key used for authenticating with AWS when retrieving EC2 instance details.
	google.protobuf.StringValue access_key = 20 [json_name="access_key"];
	// Input only.
	google.protobuf.StringValue secret_key = 30 [json_name="secret_key"];

	// This value will never be returned in a response.
	google.protobuf.BoolValue rotate = 40;
}
